--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="GroundObj.js"></script>
     <script src="Slingshot.js"></script>
     <script src="polygon.js"></script>
+    <script src="matter.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
